<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_register"
            android:title="@string/nav_register"
            android:icon="@drawable/ic_add"/>

        <item
            android:id="@+id/nav_calendar"
            android:title="@string/nav_calendar"
            android:icon="@drawable/ic_calendar"/>

        <item
            android:id="@+id/nav_test"
            android:title="@string/nav_test"
            android:icon="@drawable/ic_calendar"/>

    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_change_profile"
                android:title="@string/nav_change_profile"
                android:icon="@drawable/ic_profile"/>

            <item
                android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_change_password"/>
        </menu>
    </item>

</menu>